# WarGames-joshua

./: .dockerignore  .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  OPERATIONAL_RUNBOOK.md  PHASE2_COMPLETION_REPORT.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_COMPLETION_SUMMARY.md  PR_DESCRIPTION.md  README.md  SECURITY.md  WARP.md  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  phase_implementation.yml
.github/workflows/: README.md  ci.yml
benches/: risk_calculation.rs
config/: default_config.toml
docs/: 00_Documentation_Index.md  01_Development_Roadmap_and_Sprint_Planning.md  02_Risk_Calculation_Methodology.md  03_Data_Collection_and_Source_Integration.md  04_Testing_and_Quality_Assurance_Plan.md  05_Database_Design_and_Schema.md  06_Architecture_and_Implementation_Guide.md  07_Deployment_and_Operations_Guide.md  08_Security_Implementation_Specifications.md  09_API_Reference.md  10_Claude_Integration_Specifications.md  11_Monitoring_and_Alerting.md  12_Disaster_Recovery_and_Business_Continuity.md  13_User_Documentation.md  14_Contributing_Guide.md  15_Performance_Optimization_Guide.md
docs/PHASE_0/: PHASE0_CLOSURE_REPORT.md  PHASE0_VERIFICATION.md
docs/PHASE_1/: PHASE1_COMPLETION_REPORT.md
migrations/: 20250101000001_initial_schema.sql  20250101000002_risk_factors.sql  20250101000003_collected_data.sql
ref-docs/: Nuclear Exchange Survival Guide for North America.md  Nuclear Precipice - Earth at 89 Seconds to Midnight.md  WarGames-joshua_AppSpec.md  WarGames-joshua_DIAGRAMS.md
src/: constants.rs  error.rs  lib.rs  main.rs  types.rs
src/analyzers/: claude_client.rs  claude_models.rs  consensus.rs  mod.rs  prompt_builder.rs  response_parser.rs
src/cli/: mod.rs
src/collectors/: base.rs  mod.rs
src/engines/: claude_integration.rs  data_collection.rs  database.rs  mod.rs  notification.rs  risk_calculation.rs
src/models/: assessment.rs  data_point.rs  mod.rs  risk_factor.rs
src/utils/: cache.rs  config.rs  content_filter.rs  deduplication.rs  http_client.rs  logging.rs  mod.rs  quality_scorer.rs  rate_limiter.rs  security.rs
src/visualizers/: mod.rs
tests/: integration_test.rs
